--- a/BubbleGenerator/BubbleGenerator/PaintingWindow.xaml
+++ b/BubbleGenerator/BubbleGenerator/PaintingWindow.xaml
@@ -4,7 +4,7 @@
         Title="MainWindow" Height="768" Width="1366" WindowStartupLocation="CenterScreen" 
         KeyDown="Window_KeyDown">
     <Grid>
-        <Image x:Name="backgroundImage" Stretch="Uniform"/>
+        <Image x:Name="backgroundImage" Stretch="None" VerticalAlignment="Top" HorizontalAlignment="Left"/>
         <Canvas x:Name="canvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                 Background="#00000000"
                 MouseLeftButtonDown="canvas_MouseLeftButtonDown" />
